# HashBaseDB

./: .gitignore  CMakeLists.txt  README.md
database/: index.idx  winkel.db
docs/: DESIGN.md  notes.md
include/: database.hpp  hash.hpp
include/core/: database.hpp  hash.hpp  trim.hpp
include/frontend/: types.hpp  window.hpp
include/frontend/components/: add_record.hpp  main_menu.hpp  remove_record.hpp  search_record.hpp
include/services/: db_service.hpp  ui_service.hpp
include/test/: unit_tests.hpp
src/: main.cpp
src/core/: database.cpp  hash.cpp  main.cpp
src/frontend/: window.cpp
src/frontend/components/: add_record.cpp  main_menu.cpp  remove_record.cpp  search_record.cpp  ui.cpp
src/services/: db_service.cpp  ui_service.cpp
src/test/: unit_tests.cpp
